--- a/school/everyoneWorks.html
+++ b/school/everyoneWorks.html
@@ -430,6 +430,20 @@
 		});
 	}
 	
+//	var nativeWebview, imm, InputMethodManager;
+//	var initNativeObjects = function() {
+//	    if (mui.os.android) {
+//	        var main = plus.android.runtimeMainActivity();
+//	        var Context = plus.android.importClass("android.content.Context");
+//	        InputMethodManager = plus.android.importClass("android.view.inputmethod.InputMethodManager");
+//	        imm = main.getSystemService(Context.INPUT_METHOD_SERVICE);
+//	    } else {
+//	        nativeWebview = plus.webview.currentWebview().nativeInstanceObject();
+//	    }
+//	};
+
+
+
 	function everyoneWorksComment(item){
 		//currentItem=item;
 		console.info("scShowAllComment");
