--- a/school/personalCenter.html
+++ b/school/personalCenter.html
@@ -239,7 +239,11 @@
 //	var webview_student_honor = null;
 			
 //			
-			 main =  plus.android.runtimeMainActivity();
+			if(plus.os.name=="Android"){
+				main =  plus.android.runtimeMainActivity();
+			}else if(plus.os.name=="iOS"){				
+				main =  plus.ios.runtimeMainActivity()
+			}
 			var backButtonPress = 0;
 			mui.back = function(event) {
 				backButtonPress++;
