--- a/walking/wkMap.html
+++ b/walking/wkMap.html
@@ -29,6 +29,7 @@
 <script src="../js/walking/useAll.js" type="text/javascript" charset="utf-8"></script>
 <script src="../js/walking/wkMap.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
+	//mui.init();
   	 mui.plusReady(function(){
   	 	$("#btn_wk_map_back").on('tap',function(){
     		 mui.back();   		
