--- a/school/welcomePage.html
+++ b/school/welcomePage.html
@@ -15,12 +15,12 @@
 			body {
 				background-color: #efeff4;
 			}
-			.main_bg{
+			/*.main_bg{
 				background: -webkit-linear-gradient(bottom,  #FED361,#FEC332); /* Safari 5.1 - 6.0 */
 				background: -o-linear-gradient(bottom, #FED361,#FEC332); /* Opera 11.1 - 12.0 */
 				background: -moz-linear-gradient(bottom, #FED361,#FEC332); /* Firefox 3.6 - 15 */
 				background: linear-gradient(to bottom, #FED361,#FEC332); /* 标准的语法（必须放在最后） */
-			}
+			}*/
 		</style>
 	</head>
 
@@ -58,7 +58,7 @@
 					"popGesture": "hide",
 					"bounce": "vertical" ,
 					top: '0px',
-					bottom: '50px'
+					bottom: '58px'
 			};
 			var activeTab = subpages[0];
 			var activeTabIndex=0;
