大家作品，进入时候清理数据

--- a/school/everyoneWorks.html
+++ b/school/everyoneWorks.html
@@ -373,6 +373,8 @@
 	
 	document.addEventListener('get_every_one_works', function(event) {
 		activityId = event.detail.activityId;
+		vm_everyone_work.workList=[];
+		//console.info(vm_everyone_work.workList.length);
 		console.info(activityId);
 		vm_everyone_work.activityId=activityId;
 		vm_everyone_work.commentInfo.actComActId=activityId;
