--- a/school/exchangeArea.html
+++ b/school/exchangeArea.html
@@ -25,8 +25,7 @@
 	
 	<div class="bottom-div">
 		<!--<img src="../images/school/recording.png"  class="bt-left" id="addAudio"/>-->
-
-		<input type="text" v-model="commentInfo.acaDesc" id="inputContent" style=""/>
+		<input type="text" v-model="commentInfo.acaDesc" id="inputContent" style="z-index: 100;"/>
 
 		<img src="../images/school/addfile.png"  class="bt-right" id="mediaFile"/>
 		<button id="btn_exchange_area_post" type="button" class="mui-btn send-button"> 发送 </button>	
@@ -54,7 +53,7 @@
 	</ul>
 	
 	
-	<div id="item1" class="item-call mui-content mui-control-content mui-fullscreen mui-active" style="top:64px;bottom: 50px;background: #eee;">
+	<div id="item1" class="item-call mui-content mui-control-content mui-fullscreen mui-active" style="top:64px;bottom:60px;background: #eee;">
 	<div id="slider" class="mui-slider mui-fullscreen">					
 		<div class="mui-slider-group">
 			<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
@@ -226,7 +225,9 @@
 	  	onResizeWindow();
 	    window.onresize = onResizeWindow;
 	    function onResizeWindow(){
+	    	console.info("resize");
 	        $("#inputContent").css("width",$(window).width()-116);
+	         
 	    }
 	  	
 		var activityList=[];
