--- a/school/activityList.html
+++ b/school/activityList.html
@@ -260,17 +260,20 @@
 	
 	
 	mui.plusReady(function() {
-			if(plus.os.name=="Android"){
+		
+			if(mui.os.android){ 
 				main =  plus.android.runtimeMainActivity();
 			}
+		 
 			var backButtonPress = 0;
 			mui.back = function(event) {
 				backButtonPress++;
 				if (backButtonPress > 1) {
 //					plus.runtime.quit();
 //					app.logout();
-
-					 main && main.moveTaskToBack(false);
+					if(mui.os.android){
+						main && main.moveTaskToBack(false);
+					}
 				} else {
 					plus.nativeUI.toast('再按一次退出应用');
 				}
