--- a/school/scShowAll.html
+++ b/school/scShowAll.html
@@ -517,7 +517,7 @@
 	
 	mui.plusReady(function () {
 
-			if(plus.os.name=="Android"){
+			if(mui.os.android){
 				main =  plus.android.runtimeMainActivity();
 			}
 		var backButtonPress = 0;
@@ -526,7 +526,10 @@
 				if (backButtonPress > 1) {
 //					plus.runtime.quit();
 //					app.logout();
-					 main && main.moveTaskToBack(false);
+					if(mui.os.android){
+						main && main.moveTaskToBack(false);
+					}
+					// main && main.moveTaskToBack(false);
 				} else {
 					plus.nativeUI.toast('再按一次退出应用');
 				}
