--- a/school/setPage.html
+++ b/school/setPage.html
@@ -30,13 +30,13 @@
 		<img src="../images/head-dz.png" class="head-dz"/>
 		<h1 class="mui-title">设置</h1>
 	</header>
-	<div class="mui-content">
-		<form class="mui-input-group">  
-			<div id="modify_password"  class="mui-input-row">
+	<div class="mui-content" >
+		<form class="mui-input-group" style="padding: 5px 0px;">  
+			<div id="modify_password"  class="mui-input-row" style="margin: 5px 0px;">
 				<label>修改密码  </label> 
 				<div class="mui-icon mui-icon-arrowright my_arrowr"  ></div>
 			</div>
-			<div id="personal_set_link"  class="mui-input-row">
+			<div id="personal_set_link"  class="mui-input-row" style="margin: 5px  0px;">
 				<label>修改个人信息</label> 
 				<div class="mui-icon mui-icon-arrowright my_arrowr"></div>
 			</div>
