--- a/walking/msgInfo.html
+++ b/walking/msgInfo.html
@@ -61,14 +61,16 @@
 
 		<div id="item2" class="item-call mui-content mui-control-content">
 			<div class="msg-title">
-				<p>对话</p>
+				<p class="msg-dw">对话</p>
+				<p class="msg-dw-sub">Dialogue</p>
 			</div>
 			<section id="autotype">
 				<ul class="mui-table-view"></ul>
 			</section>
 			
 			<div class="msg-title">
-				<p>词汇</p>
+				<p class="msg-dw">词汇</p>
+				<p class="msg-dw-sub">Words</p>
 			</div>
 			
 			<div class="words-content"></div>
