兼容性优化
兼容性优化

--- a/login.html
+++ b/login.html
@@ -21,15 +21,15 @@
 			<div class="mui-input-group">
 				<div class="mui-input-row" id="account-wrapper">
 					<span class="mui-icon login-user"></span>
-					<input type="text" id="loginName" placeholder="请输入用户帐号" value="" />
+					<input type="text" id="loginName" placeholder="用户名" value="" />
 				</div>
 				<div class="mui-input-row">
 					<span class="mui-icon login-pwd"></span>
-					<input type="password" id="password" class="mui-input-password password" placeholder="请输入用户密码" value="" />
+					<input type="password" id="password"  placeholder="密 码" value="" />
 				</div>
 				<div class="button-group">
 					<div>
-						<button id="login-btn" type="button" class="mui-btn mui-btn-primary mui-btn-block"> 登 录 </button>
+						<button id="login-btn" type="button" class="mui-btn mui-btn-primary mui-btn-block"> 登录 </button>
 					</div>
 				</div>
 
