--- a/school/curriculum.html
+++ b/school/curriculum.html
@@ -11,14 +11,17 @@
 	<link href="../css/top.css" rel="stylesheet"/>
     <link href="../css/foot.css" rel="stylesheet"/>
     <style type="text/css">
+    		.mui-bar-nav, .besttone-head {
+		    height: 84px;
+		}
     </style>
 </head>
 <body class="pagebg  bg_gradient">
 	<div >
 		<header class="mui-bar mui-bar-nav">
 			<img src="../images/head-dz.png" class="head-dz"/>
-			<a class="mui-pull-left" style="margin: 32px 0;color:#000;font-size:14px;position: fixed;opacity: .5;"
-				id="action-1"> 分类 </a>
+			<!--<a class="mui-pull-left" style="margin: 32px 0;color:#000;font-size:14px;position: fixed;opacity: .5;"
+				id="action-1"> 分类 </a>-->
 			<div  class="mui-segmented-control title-control">
 				<a class="mui-control-item mui-active call-btn" href="#item1" id="it1">
 					我的课程
@@ -27,8 +30,8 @@
 					全部课程
 				</a>
 			</div>
-			<a class="mui-pull-right" style="margin:2px 0;color:#000;font-size:14px;position: fixed;right:10px;opacity: .5;"
-			   id="action-2"> 编辑 </a>
+			<!--<a class="mui-pull-right" style="margin:2px 0;color:#000;font-size:14px;position: fixed;right:10px;opacity: .5;"
+			   id="action-2"> 编辑 </a>-->
 		</header>
 
 
