--- a/school/exchangeArea.html
+++ b/school/exchangeArea.html
@@ -53,7 +53,8 @@
 	</ul>
 	
 	
-	<div id="item1" class="item-call mui-content mui-control-content mui-fullscreen mui-active" style="top:64px;bottom:60px;background: #eee;">
+	<div id="item1" class="item-call mui-content mui-control-content mui-fullscreen mui-active" 
+		style="top:64px;bottom:60px;background: #fff;">
 	<div id="slider" class="mui-slider mui-fullscreen">					
 		<div class="mui-slider-group">
 			<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
@@ -136,6 +137,17 @@
 				},
 				acAreaList:[
 //				{
+//	                "acaId": 1,
+//	                "acaTime": "2017-08-14 16:07:32",
+//	                "acaStudentId": 24,
+//	                "acaDesc": "测试交流区显示",
+//	                "acaStudentName": "测试200",
+//	                "acaFiles": "http://112.124.110.182:11008/upload/SchoolPicture/20170812/B20170812190705_1105263d46aa434b923839281ac0a1fb.png",
+//	                "acaClassId": 8,
+//	                "acaOperType": 1,
+//	                "showStudentPic": "http://112.124.110.182:11008/upload/studentPicture/20170812/B20170812184037_d0959b7a25b64a80ac9bbfa428b7110b.png"
+//	           },
+//	           {
 //	                "acaId": 1,
 //	                "acaTime": "2017-08-14 16:07:32",
 //	                "acaStudentId": 24,
