--- a/school/personalCenter.html
+++ b/school/personalCenter.html
@@ -16,8 +16,9 @@
 	<div id="personal_center_content">
 		
 		
-	<header class="mui-bar mui-bar-nav" style="height: 260px;
+	<header class="mui-bar mui-bar-nav" style="height: 272px;
     background: url(../images/school/psct_top.png);background-size: cover">
+    		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		<a href="#" id="personal_center_set_page" class="mui-icon mui-icon-gear mui-pull-right" style="text-shadow: 0px 2px 2px #333333;font-size: 28px;"></a>
 		<img src="../images/school/head-btm.png" class="head-pic-btm">
 		<img src="../images/school/ct-dianzhui.png" class="dz-icon">
@@ -36,7 +37,7 @@
 	</header>
 	 
 	<div class="mui-content1">
-		<div v-if="userInfo.roleType==3"  style="margin-top: 20px;">			
+		<div v-if="userInfo.roleType==3"  style="margin-top:32px;">			
 			<div class="myh5_card">
 				<a id="personal_student_time_line_link" href="#" class="top psct_purple">
 					<img src="../images/school/btm-round.png" class="photo">
