--- a/school/timeline.html
+++ b/school/timeline.html
@@ -23,7 +23,7 @@
 
 		<section id="time-line-content" class="mui-content">
 			<img src="../images/school/timeline-dz.png" class="timeline-dz"/>
-			<!--<h3>2017</h3> -->
+			<!--<h3>2017</h3>--> 
 			<ul class="detail_list">
 				<li v-for="item in timeLineList">
 					<div class="date">{{item.showActTime}}</div>
@@ -43,14 +43,14 @@
 		el: '#time-line-content',
 		data: {
 			timeLineList:[ 
-//			{
-//	           "showActName": "外滩行活动",
-//	           "showActTime": "2017-08-12"
-//	        },
-//	        {
-//	           "showActName": "外滩行活动",
-//	           "showActTime": "2017-08-12"
-//	        }
+			{
+	           "showActName": "外滩行活动",
+	           "showActTime": "2017-08-12"
+	        },
+	        {
+	           "showActName": "外滩行活动",
+	           "showActTime": "2017-08-12"
+	        }
 			]
 		} 
 	});
