--- a/school/activityDetails.html
+++ b/school/activityDetails.html
@@ -23,7 +23,7 @@
 		<img src="../images/head-dz.png" class="head-dz"/>
 		<h1 class="mui-title">活动详情</h1>
 		<a id="activity_every_one_work" class="mui-pull-right top-edit">大家作品</a>
-		<a id="activity_reply_detail"   class="mui-pull-right top-edit" style="left:50px; right:250px">活动集锦</a>
+		<a id="activity_reply_detail"   class="mui-pull-right top-edit" style="left:32px; right:250px;width: 60px;">活动集锦</a>
 	</header>
 
 	<!--<nav id="main_bar" class="mui-bar mui-bar-tab">
@@ -54,7 +54,7 @@
 				<div v-else-if="courseInfo.actEnd==1 && userInfo.roleType==3"  id="activity_detail_join" class="ac-end-join">加入</div>
 				<div v-else-if="courseInfo.actEnd==1 && userInfo.roleType==2" class="ac-end-join">进行中</div>
 				<div v-else id="activity_detail_join_end" class="ac-end">结束</div>
-				<p style="font-size: 12px !important;">剩余名额{{courseInfo.surplustCount}}人</p>
+				<p style="font-size: 12px !important;">余{{courseInfo.surplustCount}}名额</p>
 			</div>
 			<div class="show-desc-left">
 				<p class="show-desc-title">{{courseInfo.actName}}</p>
@@ -86,7 +86,7 @@
 			<p  class="content">{{courseInfo.actSendWord}}</p>
 
 		</div>
-		<div style="padding:32px;background-color:#F7F7F7;">
+		<div style="padding:32px;background-color:#FFF;">
 			<button  v-if="userInfo.roleType==3 && courseInfo.hasPart==1" @tap="open_activity_my_works()" id="btn_activity_my_works" type="button" 
 				class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">我的作品</button>
 			<button v-if="userInfo.roleType==2 && courseInfo.actFine==1" id="btn_activity_my_works_show" type="button" 
