--- a/school/courseDetails.html
+++ b/school/courseDetails.html
@@ -37,17 +37,17 @@
 					<p class="content-desc">{{item.chapDesc}}</p> 
 				</div>
 			</li>
-			<!--<li>
+			<li>
 				<div class="content-div">
 					<div class="content-title">2、艺术照赏析</div>
 					<img class="content-img" src="../images/bigicon4.png"> 
 					<p class="content-desc">照相机（简称：相机）是一种利用光学成像原理形成影像并使用底片记录影像的设备，是用于摄影的光学器械。在现代社会生活中有很多可以记录影像的设备，
 						它们都具备照相机的特征，比如医学成像设备、天文观测设备等。</p> 
 				</div>				
-			</li>-->
+			</li>
 		</ul>
 		
-		<div style="padding:32px;background-color:#F7F7F7;">
+		<div style="padding:32px;background-color:#FFF;">
 			<button id="btn_course_detail_exprience" type="button" class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">学习体会</button>
 		</div>
 	</div>
